    - Fix backslash-escaping in merge_debconf_into_conf (LP: #448413).  Note
      that this differs slightly from the fix in Ubuntu, which corrected
      behaviour when amending an existing configuration item but
      accidentally over-escaped when adding a new one.
    - Replace "single" with "recovery" when friendly-recovery is installed
      (LP: #575469).

 -- Adam Conrad <adconrad@debian.org>  Fri, 04 Jan 2013 13:11:42 -0700

grub2 (2.00-10) experimental; urgency=low

  * Support parallel builds.
  * Remove /boot/grub/unicode.pf2 on purge of grub-efi-{amd64,i386} (closes:
    #697183).
  * Build with GCC 4.7.
  * Merge from Ubuntu:
    - Don't permit loading modules on UEFI Secure Boot (since in such a
      setup the GRUB core image must be signed but it has no provision for
      verifying module signatures).
    - Read /etc/default/grub.d/*.cfg after /etc/default/grub (LP: #901600).
    - Blacklist 1440x900x32 from VBE preferred mode handling until a better
      solution is available (LP: #701111).

 -- Colin Watson <cjwatson@debian.org>  Thu, 03 Jan 2013 09:38:25 +0000

grub2 (2.00-9) experimental; urgency=low

  * Ensure /boot/grub exists before copying files to it for EFI installs
    (closes: #696962).

 -- Colin Watson <cjwatson@debian.org>  Sat, 29 Dec 2012 23:44:51 +0000

grub2 (2.00-8) experimental; urgency=low

  * debian/apport/source_grub2.py:
    - Use context managers to avoid (harmless) file descriptor leaks.
    - Set a file encoding, per PEP 0263.
  * Drop grub-ieee1275-bin's dependency on bc in favour of powerpc-ibm-utils
    (>= 1.2.12-1) (cf. #625728).
  * Move powerpc-ibm-utils and powerpc-utils dependencies from
    grub-ieee1275-bin to grub-ieee1275 (closes: #693400).
  * Merge from Ubuntu:
    - Ignore symlink traversal failures in grub-mount readdir
      (LP: #1051306).
    - Fix incorrect initrd minimum address calculation (LP: #1055686).
    - Avoid assuming that gets is declared.